// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has different styling when disabled 1`] = `
.c0 {
  background: #0000;
  border: 2px solid #eee;
  border-radius: 3px;
  color: #eee;
  cursor: pointer;
  font-size: 1.5em;
  margin: 0 1em;
  padding: 0.25em 1em;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`styles a button element 1`] = `
.c0 {
  background: #0000;
  border: 2px solid #db7093;
  border-radius: 3px;
  color: #db7093;
  cursor: pointer;
  font-size: 1.5em;
  margin: 0 1em;
  padding: 0.25em 1em;
}

<button
  className="c0"
/>
`;
